Updated main.html and added fourhappyfriends.png

--- a/main.html
+++ b/main.html
@@ -6,8 +6,25 @@
     <title>CTI110</title>
 </head>
 <body>
-  <h1>This is the best website ever!</h1>
-  <p>I am the best website maker ever!</p>  
-  <p><a href="https://github.com/aahead/cti110.git">My repository Link</a></p>
+  <h1>Welcome to 4-in-1 by Abram Head!</h1>
+  <p>I am the creator of 4-in-1 the video game where 4 people control 1 character!<br>This game is a revolutionary way to play with your friends, it will have you building relationships and yelling at each other each step of the way.
+  </p>  
+  <a href="https://github.com/aahead/cti110.git">My repository Link</a><br>
+  <img src="fourhappyfriends.png" alt="4 Happy Friends"><br>4 Happy Friends</img>
+  <p id="Bottom">Co-edited by Abdelali and Abram</p>
+  <style>
+    img {
+        height: 300px;
+        width: 300;
+    }
+    body {
+        text-align: center;
+    }
+    #Bottom {
+        position: fixed;
+        bottom: 0;
+        text-align: center;
+    }
+  </style>
 </body>
 </html>
